--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <!-- Header -->
                 <div class="text-center pt-8 md:pt-0">
                     <h2 class="text-3xl md:text-4xl font-bold" style="color: #00ff47; text-shadow: 0 0 10px #00ff47;">KRISHNA VISHWA VIDYAPEETH </h2>
-                    <p class="text-sm text-gray-400 mt-2">Designed & Developed by ICT DEPT , KVV Karad</p>
+                    <p class="text-sm text-gray-400 mt-2">Designed & Developed by Mayur More (IT Manager), KVV Karad</p>
                 </div>
 
                 <!-- Input Methods & Actions -->
